--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  cloud_firestore: ^1.0.3
   firebase_core : ^1.0.0
   firebase_auth: ^1.0.1
   flutter_test:
